# hugr-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  flake.nix
hugr-mlir/: CMakeLists.txt  Cargo.toml  build.rs
hugr-mlir/src/: hugr_to_mlir.rs  lib.rs  mlir.rs  mlir_to_hugr.rs  translate.rs
hugr-mlir/src/hugr_to_mlir/: types.rs  value.rs
hugr-mlir/src/mlir/: macros.rs
hugr-mlir/src/mlir_to_hugr/: hash.rs
hugr-mlir/src/snapshots/: hugr_mlir__hugr_to_mlir__test__cfg.snap  hugr_mlir__hugr_to_mlir__test__loop_with_conditional.snap  hugr_mlir__hugr_to_mlir__test__simple_recursion.snap
hugr-mlir/src/test/: example_hugrs.rs
hugr-mlir/tests/: guppy_export_tests.rs
hugr-mlir/tests/guppy-exports/: .gitignore  test_ann_assign.json  test_arith.json  test_arith_basic.json  test_arith_big.json  test_assign.json  test_assign_expr.json  test_aug_assign.json  test_basic.json  test_basic_linear.json  test_both_return.json  test_break.json  test_break_different_types1.json  test_break_different_types2.json  test_builtin.json  test_call.json  test_call_1.json  test_call_2.json  test_call_back.json  test_call_twice.json  test_capture.json  test_capture_arg.json  test_capture_assigned.json  test_capture_cfg.json  test_capture_deep.json  test_capture_multiple.json  test_capture_recurse.json  test_capture_recurse_nested.json  test_capture_while.json  test_classical_linst_comp.json  test_constant.json  test_continue.json  test_copy.json  test_copyable.json  test_counting_loop.json  test_curry.json  test_define_twice.json  test_dependent.json  test_different_args.json  test_different_types1.json  (+96 more)
hugr-mlir/tests/snapshots/: guppy_export_tests__guppy_exports@test_ann_assign.json.snap  guppy_export_tests__guppy_exports@test_arith.json-2.snap  guppy_export_tests__guppy_exports@test_arith.json.snap  guppy_export_tests__guppy_exports@test_arith_basic.json-2.snap  guppy_export_tests__guppy_exports@test_arith_basic.json.snap  guppy_export_tests__guppy_exports@test_arith_big.json-2.snap  guppy_export_tests__guppy_exports@test_arith_big.json.snap  guppy_export_tests__guppy_exports@test_assign.json-2.snap  guppy_export_tests__guppy_exports@test_assign.json.snap  guppy_export_tests__guppy_exports@test_assign_expr.json-2.snap  guppy_export_tests__guppy_exports@test_assign_expr.json.snap  guppy_export_tests__guppy_exports@test_aug_assign.json-2.snap  guppy_export_tests__guppy_exports@test_aug_assign.json.snap  guppy_export_tests__guppy_exports@test_basic.json-2.snap  guppy_export_tests__guppy_exports@test_basic.json.snap  guppy_export_tests__guppy_exports@test_basic_linear.json.snap  guppy_export_tests__guppy_exports@test_both_return.json.snap  guppy_export_tests__guppy_exports@test_break.json.snap  guppy_export_tests__guppy_exports@test_break_different_types1.json.snap  guppy_export_tests__guppy_exports@test_break_different_types2.json.snap  guppy_export_tests__guppy_exports@test_call.json.snap  guppy_export_tests__guppy_exports@test_call_1.json.snap  guppy_export_tests__guppy_exports@test_call_2.json.snap  guppy_export_tests__guppy_exports@test_call_back.json.snap  guppy_export_tests__guppy_exports@test_call_twice.json.snap  guppy_export_tests__guppy_exports@test_capture_arg.json.snap  guppy_export_tests__guppy_exports@test_capture_assigned.json.snap  guppy_export_tests__guppy_exports@test_capture_cfg.json.snap  guppy_export_tests__guppy_exports@test_capture_deep.json.snap  guppy_export_tests__guppy_exports@test_capture_multiple.json.snap  guppy_export_tests__guppy_exports@test_capture_recurse.json.snap  guppy_export_tests__guppy_exports@test_capture_recurse_nested.json.snap  guppy_export_tests__guppy_exports@test_capture_while.json.snap  guppy_export_tests__guppy_exports@test_constant.json.snap  guppy_export_tests__guppy_exports@test_continue.json.snap  guppy_export_tests__guppy_exports@test_copy.json.snap  guppy_export_tests__guppy_exports@test_counting_loop.json.snap  guppy_export_tests__guppy_exports@test_curry.json.snap  guppy_export_tests__guppy_exports@test_define_twice.json.snap  guppy_export_tests__guppy_exports@test_different_types1.json.snap  (+56 more)
hugr-rs-bridge/: CMakeLists.txt  Cargo.toml  README.md  build.rs
hugr-rs-bridge/cxx/: HugrRsBridge.cpp
hugr-rs-bridge/include/hugr-rs-bridge/: hugr-rs-bridge.h
hugr-rs-bridge/src/: lib.rs  to_mlir.rs
mlir/: CMakeLists.txt  default.nix
mlir/include/hugr-mlir-c/: Analysis.h  Conversion.h  Dialects.h  Opt.h  Support.h  Transforms.h  Translate.h
mlir/include/hugr-mlir/Analysis/: CMakeLists.txt  (+4 more)
mlir/lib/Analysis/: CMakeLists.txt  FreeAllocAnalysis.cpp  Passes.cpp  VerifyLinearityPass.cpp
mlir/lib/CAPI/: Analysis.cpp  CMakeLists.txt  Conversion.cpp  Dialects.cpp  Opt.cpp  Support.cpp  Transforms.cpp  Translate.cpp
mlir/lib/Conversion/: CMakeLists.txt  ConvertHugrExtArithPass.cpp  ConvertHugrExtQuantumPass.cpp  ConvertHugrFuncPass.cpp  ConvertHugrPass.cpp  FinalizeHugrToLLVMPass.cpp  PreConvertHugrFuncPass.cpp  TypeConverter.cpp  Utils.cpp
mlir/lib/IR/: CMakeLists.txt  HugrAttrs.cpp  HugrDialect.cpp  HugrEnums.cpp  HugrOps.cpp  HugrTypeInterfaces.cpp  HugrTypes.cpp
mlir/lib/Opt/: CMakeLists.txt  HugrOpt.cpp
mlir/lib/Transforms/: CMakeLists.txt  LowerHugrPass.cpp  Utils.cpp
mlir/lib/Translate/: CMakeLists.txt  HugrTranslate.cpp
mlir/python/: CMakeLists.txt  HugrExtension.cpp  __init__.py
mlir/python/dialects/: hugr.py
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  smoke-test.mlir
mlir/test/CAPI/: CMakeLists.txt  TestHugrMlirCAPI.c
mlir/test/Translate/: CMakeLists.txt  test-import-example-hugr.cpp
mlir/test/builder-tests/: cfg.mlir  circuit.mlir  conditional.mlir  dataflow.mlir  module.mlir  tail_loop.mlir
mlir/test/hugr-rs-bridge/: CMakeLists.txt  TestHugrRsBridge.cpp
mlir/test/lower-hugr/: 1.mlir
mlir/test/python/: lit.local.cfg  test.py
mlir/tools/: CMakeLists.txt
mlir/tools/hugr-mlir-lsp-server/: CMakeLists.txt  hugr-mlir-lsp-server.cpp
mlir/tools/hugr-mlir-opt/: CMakeLists.txt  hugr-mlir-opt.cpp
mlir/tools/hugr-mlir-translate/: CMakeLists.txt  hugr-mlir-translate.cpp
(+227 files in other folders)
