[package]
name = "hugr-mlir"
version = "0.1.0"
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/CQCL/mlir-hugr"

description = "TODO"

edition = "2021"
rust-version = "1.70"

[lib]
name = "hugr_mlir"
bench = false

[[bin]]
name = "hugr-mlir-translate"

[dependencies]
quantinuum-hugr = { git = "https://github.com/CQCL-DEV/hugr.git" }
mlir-sys = "*"
melior = { path = "../melior/melior" , features = [] }
rmp-serde = "^1.1.2"
serde_json = "*"
itertools = "*"
anyhow = "*"
downcast-rs = "*"
mlir-sys0 = "*"

[dev-dependencies]
insta = { version = "*", features = ["glob"] }
rstest = "*"
serial_test = "*"

[build-dependencies]
bindgen = "^0.68.1"

[patch.crates-io]
# tblgen = { path = "../tblgen-rs" }
mlir-sys = { path = "../mlir-sys" }
mlir-sys0 = { path = "../mlir-sys/mlir-sys0" }
melior-macro = { path = "../melior/macro" }

[patch."https://github.com/CQCL-DEV/hugr.git"]
quantinuum-hugr = { path = "../hugr" }


[workspace]
members = []
