[package]
name = "hugr-mlir"
version = "0.1.0"
license.workspace = true
readme.workspace = true
repository.workspace = true


description = "TODO"

edition.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_mlir"
bench = false

[[bin]]
name = "hugr-mlir-translate"

[dependencies]
quantinuum-hugr = { git = "https://github.com/CQCL-DEV/hugr.git" }
mlir-sys = "0.2.0"
mlir-sys0 = { git = "https://github.com/doug-q/mlir-sys", branch="llvm18" }
melior = { version = "0.11.0", features = [] }
rmp-serde = "1.1.2"
serde_json = "1.0"
itertools = "0.11"
anyhow = "1.0"
downcast-rs = "1.2"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
rstest = "0.18.2"
serial_test = "2.0"

[build-dependencies]
bindgen = "0.68.1"
